# calculator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  build-debug.bat  build-release.bat  makefile
src/: application.cpp  application.hpp  console.cpp  console.hpp  main.cpp  translationhandler.cpp  translationhandler.hpp
src/resources/: locale.json
